--- a/Bk_Strass/Quemsomos.html
+++ b/Bk_Strass/Quemsomos.html
@@ -5,7 +5,7 @@
  *  Alunos: 
  *          Guilherme Luiz Machado Machancoses - RA: 0005/22-1
  *          Bruno dos Santos Gomes - RA: 0035/22-1
- *          Carlos Danilo Alves de Souza - RA: 0322/22-1
+ *          Carlos Danilo Alves de Souza ok - RA: 0322/22-1
  -->
 
 <!DOCTYPE html>  
