--- a/Bk_Strass/Cadastro.html
+++ b/Bk_Strass/Cadastro.html
@@ -82,7 +82,7 @@
         <h5>Para poder comprar e receber ofertas</h5>
 
         <section class = "box">
-          <form id="form1" name="form" method="post" action="javascript:alert('Obrigado por se cadastrar.\n Seja bem vindo!!')">
+          <form id="form1" method="post" action="./assets/php/index.php">
 
             <div class="flex-outer">
               <li>
@@ -122,15 +122,15 @@
               <li>
                 <label for="Genero">Genero:</label>
               </li>
-              <div class="genero">
-                <label for="gen">Masculino</label>
-                <input type="radio" id="masc" value="masc">
+              <div class="genero" >
+                  <label for="gen">Masculino</label>
+                  <input name="genero" type="radio" id="masc" value="masc">
 
-                <label for="gen">Feminino</label>
-                <input type="radio" id="fem" value="fem">
+                  <label for="gen">Feminino</label>
+                  <input name="genero" type="radio" id="fem" value="fem">
 
-                <label for="gen">Outro</label>
-                <input type="radio" id="out" value="out">
+                  <label for="gen">Outro</label>
+                  <input name="genero" type="radio" id="out" value="out">
               </div>
               <li>
                 <label for="nasc">Data de nascimento:</label>
@@ -139,6 +139,26 @@
               <li>
                 <label for="cpf">CPF:</label>
                 <input type="text" id="cpf" onblur="validateCPF()" placeholder="Digite apenas números" minlength="11" maxlength="14" required>
+              </li>
+              <li>
+                <label for="area">Área de Interesse:</label>
+                <select id="area" name="area" required>
+                  <option value="">Selecione uma opção</option>
+                  <option value="analise">Análise</option>
+                  <option value="infraestrutura">Infraestrutura</option>
+                  <option value="desenvolvimento">Desenvolvimento</option>
+                </select>
+              </li>
+              <li>
+                <label> Digite o nome do livro para empréstimo </Label>
+                <input type="text" name="livro"0>
+              </li>
+              <li>
+                <label>Escolha quem retirou o livro</label>
+                <select id="user" name="user" required>
+                  <option value="professor">Professor</option>
+                  <option value="aluno">Aluno</option>
+                </select>
               </li>
               <li>
                 <h5 for="lic">Li e aceito os termos de serviço e as políticas de privacidade.</h5>
