--- a/Bk_Strass/Cadastro.html
+++ b/Bk_Strass/Cadastro.html
@@ -143,7 +143,7 @@
               <li>
                 <label for="area">Área de Interesse:</label>
                 <select id="area" name="area" required>
-                  <option value="">Selecione uma opção</option>
+                  <option value=""disabled selected>Selecione uma opção</option>
                   <option value="analise">Análise</option>
                   <option value="infraestrutura">Infraestrutura</option>
                   <option value="desenvolvimento">Desenvolvimento</option>
